First commit: Thingsboard environment init

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,80 @@
 version: '3'
 services:
   zookeeper:
+    container_name: zookeeper
     restart: always
     build:
-        context: ./zookeeper/build
-        dockerfile: Dockerfile
+      context: ./zookeeper/build
+      dockerfile: Dockerfile
     environment:
       ZOO_MY_ID: 1
-      ZOO_SERVERS: server.1=zookeeper:2888:3888;zookeeper:2181
+      ZOO_SERVERS: 'server.1=zookeeper:2888:3888;zookeeper:2181'
     ports:
-      - 2181:2181
+      - '2181:2181'
     networks:
-          - thingsboard-network
+      - thingsboard-network
+
   kafka:
+    container_name: kafka
     restart: always
     build:
-        context: ./kafka/build
-        dockerfile: Dockerfile
+      context: ./kafka/build
+      dockerfile: Dockerfile
     depends_on:
       - zookeeper
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_LISTENERS: INSIDE://:9093,OUTSIDE://:9092
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://:9093,OUTSIDE://kafka:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_LISTENERS: 'INSIDE://:9093,OUTSIDE://:9092'
+      KAFKA_ADVERTISED_LISTENERS: 'INSIDE://:9093,OUTSIDE://kafka:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT'
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
     volumes:
-      - ./kafka/run/docker.sock:/var/run/docker.sock
+      - './kafka/run/docker.sock:/var/run/docker.sock'
     ports:
-      - 9092:9092
+      - '9092:9092'
     networks:
-          - thingsboard-network
+      - thingsboard-network
+
   thingsboard:
     container_name: thingsboard
     restart: always
     build:
-        context: ./thingsboard/build
-        dockerfile: Dockerfile    
+      context: ./thingsboard/build
+      dockerfile: Dockerfile
     depends_on:
       - kafka
     environment:
       TB_QUEUE_TYPE: kafka
-      TB_KAFKA_SERVERS: kafka:9092
+      TB_KAFKA_SERVERS: 'kafka:9092'
     volumes:
-      - ./thingsboard/data:/data
-      - ./thingsboard/logs:/var/log/thingsboard
+      - './thingsboard/data:/data'
+      - './thingsboard/logs:/var/log/thingsboard'
     ports:
-      - 9090:9090
-      - 1883:1883
-      - 7070:7070
-      - 5683-5688:5683-5688/udp
+      - '9090:9090'
+      - '1885:1883'
+      - '7070:7070'
+      - '5683-5688:5683-5688/udp'
     networks:
-            - thingsboard-network
+      - thingsboard-network
+
   tb-gateway:
     container_name: tb-gateway
     restart: always
     build:
-        context: ./tb-gateway/build
-        dockerfile: Dockerfile    
+      context: ./tb-gateway/build
+      dockerfile: Dockerfile
     depends_on:
       - thingsboard
     volumes:
-      - ./tb-gateway/logs:/var/log/thingsboard-gateway
-      - ./tb-gateway/extensions:/var/lib/thingsboard_gateway/extensions
-      - ./tb-gateway/config:/etc/thingsboard-gateway/config
+      - ./tb-gateway/config:/thingsboard_gateway/config
+      - ./tb-gateway/logs:/thingsboard_gateway/logs
+      - ./tb-gateway/extensions:/thingsboard_gateway/extensions
+    ports:
+      - "5000:5000"
     networks:
-            - thingsboard-network
+      - thingsboard-network
+
 
 networks:
-    thingsboard-network:
-        driver: bridge
+  thingsboard-network:
+    driver: bridge
