--- a/tb-gateway/config/tb_gateway.yaml
+++ b/tb-gateway/config/tb_gateway.yaml
@@ -1,47 +1,92 @@
 thingsboard:
   host: 10.33.133.132
-  port: 1883
+  port: 1885
+  remoteShell: false
+  remoteConfiguration: false
+  statsSendPeriodInSeconds: 3600
+  minPackSendDelayMS: 0
+  checkConnectorsConfigurationInSeconds: 60
   security:
-    accessToken: tWquzSLFDoda1CKJ2pub
+    accessToken: eALTa314RABdXM6zJuib
+  qos: 1
 storage:
-  type: file
-  data_folder_path: ./data/
-  max_file_count: 5
-  read_records_count: 6
-  max_records_count: 14
+  type: memory
+  read_records_count: 100
+  max_records_count: 100000
+#  type: file
+#  data_folder_path: ./data/
+#  max_file_count: 10
+#  max_read_records_count: 10
+#  max_records_per_file: 10000
+#  type: sqlite
+#  data_file_path: ./data/data.db
 connectors:
-  -
-    name: MQTT Broker Connector
+  - 
+    name: IMT Network Server MQTT Broker Connector
     type: mqtt
-    configuration: mqtt.json
+    configuration: mqtt_ns.json
 
-  -
-    name: Modbus Connector
-    type: modbus
-    configuration: modbus.json
+  - 
+    name: IMT Smart Campus MQTT Broker Connector
+    type: mqtt
+    configuration: mqtt_sc.json
 
-  -
-    name: Modbus Connector
-    type: modbus
-    configuration: modbus_serial.json
-
-  -
-    name: OPC-UA Connector
-    type: opcua
-    configuration: opcua.json
-
-  -
-    name: BLE Connector
-    type: ble
-    configuration: ble.json
-
-  -
-    name: CAN Connector
-    type: can
-    configuration: can.json
-
-  -
-    name: Custom Serial Connector
-    type: serial
-    configuration: custom_serial.json
-    class: CustomSerialConnector
+#  -
+#    name: Modbus Connector
+#    type: modbus
+#    configuration: modbus.json
+#
+#  -
+#    name: Modbus Connector
+#    type: modbus
+#    configuration: modbus_serial.json
+#
+#  -
+#    name: OPC-UA Connector
+#    type: opcua
+#    configuration: opcua.json
+#
+#  -
+#    name: BLE Connector
+#    type: ble
+#    configuration: ble.json
+#
+#  -
+#    name: REQUEST Connector
+#    type: request
+#    configuration: request.json
+#
+#  -
+#    name: CAN Connector
+#    type: can
+#    configuration: can.json
+#
+#  -
+#    name: BACnet Connector
+#    type: bacnet
+#    configuration: bacnet.json
+#
+#  -
+#    name: ODBC Connector
+#    type: odbc
+#    configuration: odbc.json
+#
+#  -
+#    name: REST Connector
+#    type: rest
+#    configuration: rest.json
+#
+#  -
+#    name: SNMP Connector
+#    type: snmp
+#    configuration: snmp.json
+#  -
+#    name: FTP Connector
+#    type: ftp
+#    configuration: ftp.json
+#
+#  -
+#    name: Custom Serial Connector
+#    type: serial
+#    configuration: custom_serial.json
+#    class: CustomSerialConnector
